manifests/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-api
  template:
    metadata:
      labels:
        app: front-api
    spec:
      containers:
        - name: front-api
          image: moonorb/flaskauth:v6
          args: ["gunicorn", "-w 1", "app:app", "-b 0.0.0.0:5000"]
          ports:
            - containerPort: 5000
